--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "cypress": "^9.5.3",
     "eslint": "^8.12.0",
-    "start-server-and-test": "^1.14.0"
+    "start-server-and-test": "^1.14.0",
+    "http-server": "^14.1.0"
   }
 }
