--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "cypress": "^9.5.3",
     "eslint": "^8.12.0",
     "http-server": "^14.1.0",
-    "start-server-and-test": "^1.14.0"
-  },
-  "dependencies": {
+    "start-server-and-test": "^1.14.0",
     "concurrently": "^7.1.0"
   }
 }
